fix sidebar overflow

--- a/css/home.css
+++ b/css/home.css
@@ -204,3 +204,8 @@ a:visited{
     cursor: pointer;
     cursor: hand;
 }
+
+.sidebar {
+    overflow-y: auto;
+    height: 90%;
+}
